@Media update for mobile devices

--- a/rgbGame.css
+++ b/rgbGame.css
@@ -78,3 +78,13 @@ button:hover {
 	color: white;
 	background: steelblue;
 }
+
+@media (max-width: 770px) {
+  .container {
+    margin: 0 10%;
+  }
+
+  .image {
+    width: 100%;
+  }
+}
