--- a/rgbGame.css
+++ b/rgbGame.css
@@ -25,6 +25,7 @@ h1 {
 	text-align: center;
 	line-height: 1.1;
 	font-weight: normal;
+	font-size:5vw;
 	color: white;
 	background: steelblue;
 	margin: 0;
@@ -79,7 +80,7 @@ button:hover {
 	background: steelblue;
 }
 
-@media (max-width: 770px) {
+@media (max-width: 320px) {
   .container {
     margin: 0 10%;
   }
@@ -87,4 +88,5 @@ button:hover {
   .image {
     width: 100%;
   }
+  
 }
